# cuotiben-server

./: .env  .env.example  .gitignore  CLAUDE.md  QWEN.md  README.md  RULES.md  USAGE.md  ai_group_chat_api_documentation.md  ai_group_chat_design.md  ai_group_chat_improvement_plan.md  ai_role_differentiation_design.md  check_tables.py  check_user_data.py  debug_ocr.py  init_db.py  requirements.txt  run.py  start.sh  test_ai_group_chat_improvements.py  test_argon2_integration.py  test_avatar_processing.py  test_complete_api.py  test_config.py  test_env_loading.py  test_fix.py  test_historical_figures_api.py  test_image_compression_api.py  test_join.py  test_message_avatar_processing.py  test_prompt_security.py  test_qwen_api.py  test_serialization.py
app/: __init__.py  main.py
image_compress_web/: Dockerfile  advanced_watermark_remover_fixed.py  backend.py  docker-compose.yml  install-centos.sh  install-windows.bat  launch_app.bat  launch_app.ps1  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  start-docker.bat  start-docker.sh  start.bat  start.sh  start_minimized.bat  test_inpainting_enhanced.py  test_transparent_fix.py  test_watermark.py  test_watermark_simple.py  双击启动.bat
image_compress_web/api/: compress.py  deps.py  file_ops.py  models.py  watermark.py
image_compress_web/compressor/: args_parser.py  file_manager.py  image_compressor.py
image_compress_web/frontend/: index.html  script.js  styles.css
image_compress_web/frontend/css/: components.css  compress.css  main.css  watermark.css
image_compress_web/watermark/: __init__.py  core.py
(+109 files in other folders)
